--- a/CursorPosition.html
+++ b/CursorPosition.html
@@ -18,7 +18,7 @@
 			
 		}
 		.sidebar{
-			width: 14%;
+			width: 28%;
     		height: 100%;
     		float: left;
 		}
@@ -58,6 +58,9 @@
 	<script src="js/face++api.js"></script>
 	<script src="js/labels.js"></script>
 	<script src="js/thirdparty/jsplumb.min.js"></script>
+
+	<link rel="stylesheet" href="css/jquery-confirm.min.css">
+	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	
 </head>
 <body>
@@ -90,14 +93,9 @@
 		<textarea id="actualData" ></textarea>
 		<input type="button" id="plotActualBtn" value="Plot on Image" />
 	</div>
-	<div class="sidebar">
-		<textarea id="alteredData" ></textarea>
-		<input type="button" id="plotAlteredBtn" value="Plot on Image" />
-	</div>
 </div>
 <div class="clear"></div>
 
-	<input type="button" id="plotApiBtn" value="Plot on Image" />
 	<input type="button" id="clrPointsBtn" value="Clear all points" />
 <script>
 
@@ -123,15 +121,17 @@
 		$("#img_overlay").height($("#img").height());
 	});
 
+	//To display conrdinates
     $("#img_overlay").mousemove(function(event) {
         var cordinates = getCordinates(event,this);
         $("#x").val(cordinates.x);
         $("#y").val(cordinates.y);
     });
 
+    //To create new point
     $("#img_overlay").mousedown(function (ev) {
         var cordinates = getCordinates(ev,this);
-        drawPoint(1,cordinates,labels.length);
+        confirm(cordinates);
     })
 
 
