Let's user input the key from frontend

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 <div>
 	X: <input type="text" id="x"> Y: <input type="text" id="y">
 	<b>Dimentions :</b> <span id="imgdimentions"></span>
+	
+</div>
+<div>
+	<input type="text" name="api_key" id="api_key" placeholder="api_key" />
+	<input type="text" name="api_secret" id="api_secret" placeholder="api_secret" />
 	<input type="button" name="faceppBtn" id="faceppBtn" value="Fetch detail fron Face++" />
 </div>
 <div id="info"></div>
