--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 		.clear{
 			clear:both;
 		}
+		#tooltip-span {
+		    /*display:none;*/
+		    /*display:block;*/
+		    position:absolute;
+		    overflow:hidden;
+		    background-color: black;
+		    color: white;
+		}
 	</style>
 	<script src="js/thirdparty/jquery.min.js" ></script>
 	<script src="js/Face++DataParser.js"></script>
@@ -74,11 +82,7 @@
 </form>
 
 <b>Cursor Position</b>
-<div>
-	X: <input type="text" id="x"> Y: <input type="text" id="y">
-	<b>Dimentions :</b> <span id="imgdimentions"></span>
-	
-</div>
+
 <div>
 	<input type="text" name="api_key" id="api_key" placeholder="api_key" />
 	<input type="text" name="api_secret" id="api_secret" placeholder="api_secret" />
@@ -91,7 +95,7 @@
 		<img id="img"/>
 		<canvas id="canvas"></canvas>
 		<div id="img_overlay"></div>
-		<!-- <canvas id="canvas"> </canvas> -->
+		<span id="tooltip-span"></span>
 	</div>
 	
 	<div class="sidebar">
@@ -100,7 +104,7 @@
 	</div>
 </div>
 <div class="clear"></div>
-
+	<b>Dimentions :</b> <span id="imgdimentions"></span>
 	<input type="button" id="clrPointsBtn" value="Clear all points" />
 <script>
 
@@ -129,8 +133,8 @@
 	//To display conrdinates
     $("#img_overlay").mousemove(function(event) {
         var cordinates = getCordinates(event,this);
-        $("#x").val(cordinates.x);
-        $("#y").val(cordinates.y);
+        $("#tooltip-span").css({"left" : cordinates.x + 15 + "px", "top" : cordinates.y + 15 + "px"});
+        $("#tooltip-span").html("x:" + cordinates.x + "<br> y:" + cordinates.y);
     });
 
     //To create new point
