--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<!-- <script src="js/thirdparty/bootstrap.min.js"></script> -->
 	
-	
-	
 	<script src="js/Face++DataParser.js"></script>
 	<script src="js/FaceBox.js"></script>
 	<script src="js/face++api.js"></script>
@@ -21,39 +19,75 @@
 </head>
 <body>
 
+<h1 style="text-align: center;"> ImgLab</h1>
+<p style="text-align: center;">This is the webbased tool to label images with boxes and landmarks. You can also use Face++ API to prepopulate the points and then adjust them to improve the position by dragging them.</p>
 
-<form>
-	<input type="text" id="image_url" name="image_url" placeholder="URL">
-    <input type="button" id="imgUrlBtn" value="GO" />
-    Or
-	<input type="file" id="image_file" value="Browse" onchange="readURL(this)" />
-</form>
-
-<div>
-	<input type="text" name="api_key" id="api_key" placeholder="api_key" />
-	<input type="text" name="api_secret" id="api_secret" placeholder="api_secret" />
-	<input type="button" name="faceppBtn" id="faceppBtn" value="Fetch detail fron Face++" />
+<div class="container">
+	<div class="row">
+	    <div class="col-sm-8">
+			<input class="form-control" type="text" id="image_url" name="image_url" placeholder="Image URL">
+		</div>
+		<div class="col-sm-1">
+		    <input  class="btn btn-outline-info" type="button" id="imgUrlBtn" value="Show" />
+	    </div>
+	    <div class="col-sm-1">
+		    Or
+		</div>
+		<div class="col-sm-2">
+			<!-- <input type="file" id="image_file" value="Browse" onchange="readURL(this)" /> -->
+			<label class="btn-bs-file btn btn-outline-info">
+		        Browse
+		        <input type="file" id="image_file" value="Browse" onchange="readURL(this)" />
+		    </label>
+	    </div>
+    </div>
 </div>
-<div id="info"></div>
 
-<div id="container">
-	<div id="img_home">
-		<img id="img"/>
-		<canvas id="canvas"></canvas>
-		<div id="img_overlay"></div>
-		<span id="tooltip-span"></span>
-	</div>
-	
-	<div class="sidebar">
-		<textarea id="actualData" ></textarea>
-		<input type="button" id="plotActualBtn" value="Plot on Image" />
+<div class="alert" id="info"></div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-sm-2" style="background-color: #e1e6ea">
+			
+		</div>
+		<div class="col-sm-10" >
+			<div style="height: 600px">
+				<div id="img_home">
+					<img id="img"/>
+					<canvas id="canvas"></canvas>
+					<div id="img_overlay"></div>
+					<span id="tooltip-span"></span>
+				</div>
+				
+				<div class="sidebar">
+					<textarea id="actualData" ></textarea>
+					<input type="button" id="plotActualBtn" value="Plot on Image" />
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
-<div class="clear"></div>
-	<b>Dimentions :</b> <span id="imgdimentions"></span>
-	<input type="button" id="clrPointsBtn" value="Clear all points" />
 
-
+<div class="container">
+	<div class="row">
+		<div class="col-sm-4">
+			<b>Dimentions :</b> <span id="imgdimentions"></span>
+			<br><input class="btn btn-danger" type="button" id="clrPointsBtn" value="Clear all points" />
+		</div>
+		<div class="col-sm-4">
+			<div>
+				<input class="form-control" type="text" name="api_key" id="api_key" placeholder="api_key" />
+				<br>
+				<input class="form-control" type="text" name="api_secret" id="api_secret" placeholder="api_secret" />
+				<br>
+				<input class="btn btn-success" type="button" name="faceppBtn" id="faceppBtn" value="Fetch detail fron Face++" />
+			</div>
+		</div>
+		<div class="col-sm-4">
+			
+		</div>
+	</div>
+</div>
 	<script src="js/uiaction.js"></script>
 </body>
 </html>
