--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html>
 <head>
 	<title>ImgLab</title>
+
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 
 	<script src="js/thirdparty/jquery.min.js" ></script>
 	<script src="js/thirdparty/jsplumb.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
+	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
+
 	<!-- <script src="js/thirdparty/bootstrap.min.js"></script> -->
 	
 	<script src="js/Face++DataParser.js"></script>
 	<script src="js/FaceBox.js"></script>
 	<script src="js/face++api.js"></script>
 	<script src="js/labels.js"></script>
+
 	
 </head>
 <body>
@@ -53,16 +58,34 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-2" style="background-color: #e1e6ea">
-			<h5>Point Detail</h5>
-			<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
-			<div class="row">
-				<div class="col">x: <span id="div_x"></div><div class="col"> <span id="div_y">y: </div>
+			<div id="ptnDtl" >
+				<h5>Point Detail</h5>
+				<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
+				<div class="row">
+					<div class="col">x: <span id="div_x"></span></div>
+					<div class="col">y: <span id="div_y"></span></div>
+				</div>
+				<input class="form-control form-control-sm" disabled type="text" id="boxlbl" placeholder="Box Label">
+				<hr>
 			</div>
-			<input class="form-control form-control-sm" disabled type="text" id="boxlbl" placeholder="Box Label">
-			<hr>
+			<div id="boxDtl" >
+				<h5>Box Detail</h5>
+				<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
+				<div class="row">
+					<div class="col">t: <span id="div_t"></span></div>
+					<div class="col">l: <span id="div_l"></span></div>
+				</div>
+				<div class="row">
+					<div class="col">w: <span id="div_w"></span></div>
+					<div class="col">h: <span id="div_h"></span></div>
+				</div>
+				<hr>
+			</div>
+			
 			<span id="imgdimentions"></span>
 		</div>
 		<div class="col-sm-8" >
+			<input type="checkbox" name="plotType" id="plotType" checked data-on-text="Box" data-off-text="Points">
 			<div style="height: 600px">
 				<div id="img_home">
 					<img id="img"/>
@@ -113,5 +136,10 @@
 	</div>
 </div>
 	<script src="js/uiaction.js"></script>
+	<script type="text/javascript">
+		$(function(){
+			$("[name='plotType']").bootstrapSwitch();
+		})
+	</script>
 </body>
 </html>
