--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>ImgLab</title>
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/slider.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
@@ -12,14 +13,11 @@
 	<script src="js/thirdparty/jquery.min.js" ></script>
 	<script src="js/thirdparty/jsplumb.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
+	<!-- <script src="js/thirdparty/bootstrap.min.js"></script> -->
 	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
 
-	<!-- <script src="js/thirdparty/bootstrap.min.js"></script> -->
 	
-	<script src="js/Face++DataParser.js"></script>
-	<script src="js/FaceBox.js"></script>
-	<script src="js/face++api.js"></script>
-	<script src="js/labels.js"></script>
+	
 
 	
 </head>
@@ -39,18 +37,25 @@
 		      </span>
 			</div>
 		</div>
-		<!-- <div class="col-sm-1">
-		    <input  class="btn btn-outline-info" type="button" id="imgUrlBtn" value="Show" />
-	    </div> -->
-	    <div class="col-sm-1">
-		    Or
-		</div>
-		<div class="col-sm-3">
-			<label class="btn-bs-file btn btn-outline-info">Browse an Image file
-		        <input type="file" id="image_file" accept="image/*"  onchange="readURL(this)" />
+		<div class="col-sm-2">
+			<label class="btn-bs-file btn btn-outline-info">Browse Image files
+		        <input type="file" id="image_file" accept="image/*"  onchange="readURL(this)"  multiple/>
+		    </label>
+	    </div>
+	    <div class="col-sm-2">
+			<label class="btn-bs-file btn btn-outline-info">Browse Image folder
+				<input type="file" id="image_folder" webkitdirectory mozdirectory msdirectory odirectory directory onchange="readFolder(this)" >
 		    </label>
 	    </div>
     </div>
+</div>
+
+<div class="input-bar clearfix">
+	<div class="left-paddle"></div>
+    <div class="photolist-wrapper">
+        <div class="photolist"></div>
+    </div>
+    <div class="right-paddle"></div>
 </div>
 
 <div class="alert" id="info"></div>
@@ -135,7 +140,33 @@
 		</div>
 	</div>
 </div>
+<!-- <div id="thumbnails" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#thumbnails" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#thumbnails" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> -->
 	<script src="js/uiaction.js"></script>
+	<script src="js/Face++DataParser.js"></script>
+	<script src="js/FaceBox.js"></script>
+	<script src="js/face++api.js"></script>
+	<script src="js/labels.js"></script>
+	<script src="js/slider.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$("[name='plotType']").bootstrapSwitch();
