Add mouse pointer crossing lines

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 					<!-- <canvas id="canvas"></canvas> -->
 					<div id="img_overlay"></div>
 					<span id="tooltip-span"></span>
+					<div id="v_line"></div>
+					<div id="h_line"></div>
 				</div>
 				
 				
