--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slider.css">
-	<link rel="stylesheet" href="css/jquery-confirm.min.css">
+	<!-- <link rel="stylesheet" href="css/jquery-confirm.min.css"> -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 
 	<script src="js/thirdparty/jquery.min.js" ></script>
 	<script src="js/thirdparty/jsplumb.min.js"></script>
-	<script src="js/thirdparty/jquery-confirm.min.js"></script>
+	<!-- <script src="js/thirdparty/jquery-confirm.min.js"></script> -->
 	<!-- <script src="js/thirdparty/bootstrap.min.js"></script> -->
 	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
 
@@ -70,12 +70,13 @@
 					<div class="col">x: <span id="div_x"></span></div>
 					<div class="col">y: <span id="div_y"></span></div>
 				</div>
-				<input class="form-control form-control-sm" disabled type="text" id="boxlbl" placeholder="Box Label">
+				<input class="form-control form-control-sm" disabled type="text" id="ptnboxlbl" placeholder="Box Label">
+				<input type="button" class="btn btn-outline-info" value="Delete">
 				<hr>
 			</div>
 			<div id="boxDtl" >
 				<h5>Box Detail</h5>
-				<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
+				<input class="form-control form-control-sm" type="text" id="boxtxtbox" placeholder="Label">
 				<div class="row">
 					<div class="col">t: <span id="div_t"></span></div>
 					<div class="col">l: <span id="div_l"></span></div>
@@ -84,6 +85,7 @@
 					<div class="col">w: <span id="div_w"></span></div>
 					<div class="col">h: <span id="div_h"></span></div>
 				</div>
+				<input type="button" class="btn btn-outline-info" value="Delete">
 				<hr>
 			</div>
 			
@@ -142,27 +144,7 @@
 		</div>
 	</div>
 </div>
-<!-- <div id="thumbnails" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#thumbnails" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#thumbnails" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
+
 	<script src="js/uiaction.js"></script>
 	<script src="js/Face++DataParser.js"></script>
 	<script src="js/FaceBox.js"></script>
