Implement delete element

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<div class="col">y: <span id="div_y"></span></div>
 				</div>
 				<input class="form-control form-control-sm" disabled type="text" id="ptnboxlbl" placeholder="Box Label">
-				<input type="button" class="btn btn-outline-info" value="Delete">
+				<input type="button" class="btn btn-outline-danger deleteBtn" value="Delete">
 				<hr>
 			</div>
 			<div id="boxDtl" >
@@ -85,7 +85,7 @@
 					<div class="col">w: <span id="div_w"></span></div>
 					<div class="col">h: <span id="div_h"></span></div>
 				</div>
-				<input type="button" class="btn btn-outline-info" value="Delete">
+				<input type="button" class="btn btn-outline-danger deleteBtn" value="Delete">
 				<hr>
 			</div>
 			
