Persist data in memory and redraw fix: hide widget when the emelent is deleted

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-2" style="background-color: #e1e6ea">
-			<div id="ptnDtl" >
+			<div id="ptnDtl" class="widget">
 				<h5>Point Detail</h5>
 				<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
 				<div class="row">
@@ -74,7 +74,7 @@
 				<input type="button" class="btn btn-outline-danger deleteBtn" value="Delete">
 				<hr>
 			</div>
-			<div id="boxDtl" >
+			<div id="boxDtl"  class="widget">
 				<h5>Box Detail</h5>
 				<input class="form-control form-control-sm" type="text" id="boxtxtbox" placeholder="Label">
 				<div class="row">
