Make the box draggable Refactor some code to separate JS files Update read me with more To Do

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 
 	<script src="js/thirdparty/jquery.min.js" ></script>
+	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
 	<script src="js/thirdparty/jsplumb.min.js"></script>
 	<!-- <script src="js/thirdparty/jquery-confirm.min.js"></script> -->
-	<!-- <script src="js/thirdparty/bootstrap.min.js"></script> -->
-	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
+	<script src="js/thirdparty/bootstrap.min.js"></script>
 
 	
 	
@@ -146,11 +146,13 @@
 </div>
 
 	<script src="js/uiaction.js"></script>
-	<script src="js/Face++DataParser.js"></script>
+	<script src="js/widget.js"></script>
 	<script src="js/FaceBox.js"></script>
 	<script src="js/face++api.js"></script>
 	<script src="js/labels.js"></script>
+	<script src="js/dataloader.js"></script>
 	<script src="js/slider.js"></script>
+	<script src="js/Face++DataParser.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$("[name='plotType']").bootstrapSwitch();
