Export data into dlib compatible XML file

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 	<script src="js/dataloader.js"></script>
 	<script src="js/slider.js"></script>
 	<script src="js/Face++DataParser.js"></script>
+	<script src="js/dlibDataHandler.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			$("[name='plotType']").bootstrapSwitch();
