Export points of currently selected box as .pts file

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			<br><input class="btn btn-outline-primary" type="button" id="exportDlibBtn" value="Save as dlib format" />
 		</div>
 		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-outline-primary" disabled type="button" id="" value="placeholder" />
+			<br><input class="btn btn-outline-primary" type="button" id="exportPtsBtn" value="Save PTS file" />
 		</div>
 		<div class="col-sm-2 text-center">
 			<br><input class="btn btn-outline-primary" disabled type="button" id="" value="placeholder" />
