Fix: call for face++ API. However positions of points need to be fixed.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-2 text-center">
-			<br><input class="btn btn-danger" type="button" id="clrPointsBtn" value="Clear all points" />
+			<br><input class="btn btn-danger" type="button" id="clrPointsBtn" value="Clear all" />
 		</div>
 		<div class="col-sm-2 text-center">
 			<br><input class="btn btn-outline-primary" type="button" id="exportBtn" value="Save" />
