--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-2" style="background-color: #e1e6ea">
+			<h5>Toolbox</h5>
+			<div id="toolboxInfo">Selected Tool: Box</div>
+			<input type="button" class="btn btn-outline-primary" id="toolBox" value="Box" disabled="true">
+			<input type="button" class="btn btn-outline-primary" id="toolPoints" value="Points">
+			<input type="button" class="btn btn-outline-primary" id="toolR" value="some random tool">
+
 			<div id="ptnDtl" class="widget">
 				<h5>Point Detail</h5>
 				<input class="form-control form-control-sm" type="text" id="lbltxtbox" placeholder="Label">
@@ -104,7 +110,7 @@
 			<span id="imgdimentions"></span>
 		</div>
 		<div class="col-sm-8" >
-			<input type="checkbox" name="plotType" id="plotType" checked data-on-text="Box" data-off-text="Points">
+			<!-- <input type="checkbox" name="plotType" id="plotType" checked data-on-text="Box" data-off-text="Points"> -->
 			<input type="button" class="btn btn-outline-danger btn-sm deleteBtn" value="Delete">
 			<input type="button" class="btn btn-outline-danger btn-sm" id="emptyBox" value="Empty">
 			<div style="height: 600px">
@@ -190,5 +196,7 @@
 		})
 
 	</script>
+
+	<script src="js/toolbox.js"></script>
 </body>
 </html>
