--- a/index.1.html
+++ b/index.1.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slider.1.css">
 	<link rel="stylesheet" href="css/tags.css">
+	<link rel="stylesheet" href="css/svg.select.min.css">
+	<link rel="stylesheet" href="css/svg.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
@@ -88,5 +90,10 @@
 			riot.mount("images-slider");
 		});
 	</script>
+	<script src="js/thirdparty/svg.min.js"></script>
+	<script src="js/thirdparty/svg.select.min.js"></script>
+	<script src="js/thirdparty/svg.resize.min.js"></script>
+	<script src="js/thirdparty/svg.draggable.min.js"></script>
+	<script src="js/thirdparty/svg.draw.min.js"></script>
 </body>
 </html>
