add partial functionality to select all elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
 	<script src="js/thirdparty/jsplumb.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
-	<script src="js/thirdparty/bootstrap.min.js"/>
+	<script src="js/thirdparty/bootstrap.min.js"></script>
 	<script src="js/thirdparty/Blob.js"></script>
 	<script src="js/thirdparty/FileSaver.min.js"></script>
 	<script src="js/thirdparty/fxp.js"></script>
