Add loading screen with donation screen

--- a/index.1.html
+++ b/index.1.html
@@ -20,12 +20,9 @@
 	<link rel="stylesheet" href="css/svg.css">
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 
 	<script src="js/thirdparty/jquery.min.js" ></script>
-	<script src="js/thirdparty/bootstrap-switch.min.js"></script>
-	<script src="js/thirdparty/jsplumb.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<script src="js/thirdparty/bootstrap.min.js"></script>
 	<script src="js/thirdparty/riot.min.js"></script>
@@ -71,7 +68,7 @@
 
 
 	
-
+	<script src="js/prompt.js"></script>
 	<script src="js/config.js"></script>
 	<!-- <script src="js/fileOperation.js"></script>
 	<script src="js/uiaction.js"></script>
@@ -85,15 +82,15 @@
 	<script src="js/dlibDataHandler.js"></script> -->
 	<script src="tags/tags.js"></script>
 	<script type="text/javascript">
-		$(function(){
-			riot.mount("toolbox");
-			riot.mount("images-slider");
-		});
+		riot.mount("toolbox");
+		riot.mount("images-slider");
 	</script>
 	<script src="js/thirdparty/svg.min.js"></script>
 	<script src="js/thirdparty/svg.select.min.js"></script>
 	<script src="js/thirdparty/svg.resize.min.js"></script>
 	<script src="js/thirdparty/svg.draggable.min.js"></script>
 	<script src="js/thirdparty/svg.draw.min.js"></script>
+	<script src="js/thirdparty/svg.draw.min.js"></script>
+	<script src="js/thirdparty/svg.panzoom.min.js"></script>
 </body>
 </html>
