--- a/index.1.html
+++ b/index.1.html
@@ -34,13 +34,15 @@
 </head>
 <body>
 	<div class="flex-row">
-		<div id="menubar" class="d-flex flex-row overlay-color" style="height: 50px;">
-			<!-- <div class="p-2">
-				<menu></menu>
-			</div> -->
-			<div class="p-2 ">
-				<actionbar></actionbar>
+		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
+			<div class="p-2 col-11">
+				<a href="https://github.com/NaturalIntelligence/imglab"><img src="img/imglab_logo.png" height="48px"  style="margin-bottom: 2px" ></a>
+				<span style="font-size: 2em">Img Lab</span>
 			</div>
+			<div class="p-2  col-1">
+				<div><a class="btn btn-info" onclick="javascript:displayDonationPrompt()">Donate</a></div>
+			</div>
+			
 		</div><!-- End of Menubar -->
 
 		<div class="d-flex flex-row" style="height: calc(100vh - 50px);">
