--- a/index.1.html
+++ b/index.1.html
@@ -94,5 +94,6 @@
 	<script src="js/thirdparty/svg.draw.min.js"></script>
 	<script src="js/thirdparty/svg.draw.min.js"></script>
 	<script src="js/thirdparty/svg.panzoom.min.js"></script>
+	<script src="js/store.js"></script>
 </body>
 </html>
