restore svg canvas when navigating between images
- refactor separate the code in method: draw point, attachEvents to a shape, attachEvents to a feature point
- create separate css class for polygon
- update polygon points
- draw SVG elements from the store

--- a/index.1.html
+++ b/index.1.html
@@ -88,12 +88,11 @@
 		riot.mount("images-slider");
 	</script>
 	<script src="js/thirdparty/svg.min.js"></script>
+	<script src="js/thirdparty/svg.draw.min.js"></script>
 	<script src="js/thirdparty/svg.select.min.js"></script>
 	<script src="js/thirdparty/svg.resize.min.js"></script>
 	<script src="js/thirdparty/svg.draggable.min.js"></script>
-	<script src="js/thirdparty/svg.draw.min.js"></script>
-	<script src="js/thirdparty/svg.draw.min.js"></script>
-	<script src="js/thirdparty/svg.panzoom.min.js"></script>
+	<!-- <script src="js/thirdparty/svg.panzoom.min.js"></script> -->
 	<script src="js/store.js"></script>
 </body>
 </html>
