--- a/index.1.html
+++ b/index.1.html
@@ -55,6 +55,9 @@
 			</div>
 			<div class="d-flex flex-column base-color" style="width: 100vw">
 				<div>
+					<actionbar></actionbar>
+				</div>
+				<div>
 					<workarea></workarea>
 				</div>
 				<div class="grey-border mt-auto" style="height: 100px; width: 100%; margin: 0px 2px;">
@@ -86,6 +89,7 @@
 	<script src="tags/tags.js"></script>
 	<script type="text/javascript">
 		riot.mount("menu");
+		riot.mount("actionbar");
 		riot.mount("toolbox");
 		riot.mount("images-slider");
 	</script>
