--- a/index.1.html
+++ b/index.1.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" href="css/jquery-confirm.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.css">
+	<link rel="stylesheet" href="css/menu.css">
 
 	<script src="js/thirdparty/jquery.min.js" ></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
@@ -38,9 +39,12 @@
 			<div class="p-2 col-1">
 				<menu></menu>
 			</div>
-			<div class="p-2 col-10 text-center">
+			<div class="p-2 col-9 text-center">
 				<a href="https://github.com/NaturalIntelligence/imglab"><img src="img/imglab_logo.png" height="48px"  style="margin-bottom: 2px" ></a>
 				<span style="font-size: 2em">Img Lab</span>
+			</div>
+			<div class="p-2  col-1">
+				<plugins-menu></plugins-menu>
 			</div>
 			<div class="p-2  col-1">
 				<div><a class="btn btn-info" onclick="javascript:displayDonationPrompt()">Donate</a></div>
@@ -70,6 +74,7 @@
 		</div>
 
 		<div id="snackbar"></div>
+		<plugin-window></plugin-window>
 	</div>
 
 
@@ -88,7 +93,7 @@
 	<script src="js/dlibDataHandler.js"></script> -->
 	<script src="tags/tags.js"></script>
 	<script type="text/javascript">
-		riot.mount("menu");
+		riot.mount("menu, plugins-menu");
 		riot.mount("actionbar");
 		riot.mount("toolbox");
 		riot.mount("images-slider");
