fix keyboard icon alignment

--- a/v2.html
+++ b/v2.html
@@ -44,12 +44,10 @@
 				<a href="https://github.com/NaturalIntelligence/imglab"><img src="img/imglab_logo.png" height="48px"  style="margin-bottom: 2px" ></a>
 				<span style="font-size: 2em">Img Lab</span>
 			</div>
-			<div class="p-2  col-1">
-				<plugins-menu></plugins-menu>
+			<div class="p-2  col-2 form-inline flex-row-reverse">
+				<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
 				<shortcuts></shortcuts>
-			</div>
-			<div class="p-2  col-1">
-				<div><a class="btn btn-info" onclick="javascript:displayDonationPrompt()">Donate</a></div>
+				<plugins-menu></plugins-menu>
 			</div>
 			
 		</div><!-- End of Menubar -->
