--- a/v2.html
+++ b/v2.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.css">
 	<link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="css/fontello.css" >
 
 	<script src="js/thirdparty/jquery.min.js" ></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
