Centered IMG LAB in action tab

--- a/v2.html
+++ b/v2.html
@@ -28,11 +28,11 @@
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<script src="js/thirdparty/bootstrap.min.js"></script>
 	<script src="js/thirdparty/riot.min.js"></script>
-	
+
 	<script src="js/thirdparty/Blob.js"></script>
 	<script src="js/thirdparty/FileSaver.min.js"></script>
 	<script src="js/thirdparty/fxp.js"></script>
-	
+
 
 </head>
 <body>
@@ -43,14 +43,14 @@
 			</div>
 			<div class="p-2 col-9 text-center">
 				<a href="https://github.com/NaturalIntelligence/imglab"><img src="img/imglab_logo.png" height="48px"  style="margin-bottom: 2px" ></a>
-				<span style="font-size: 2em">Img Lab</span>
+				<span style="font-size: 2em; vertical-align: middle">Img Lab</span>
 			</div>
 			<div class="p-2  col-2 form-inline flex-row-reverse">
 				<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
 				<shortcuts></shortcuts>
 				<plugins-menu></plugins-menu>
 			</div>
-			
+
 		</div><!-- End of Menubar -->
 	</div>
 	<div class="flex-row">
@@ -80,7 +80,7 @@
 	</div>
 
 
-	
+
 	<script src="js/prompt.js"></script>
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
@@ -91,14 +91,14 @@
 	<script src="tags/toolbox.tag.html" type="riot/tag"></script>
 	<script src="tags/workarea.tag.html" type="riot/tag"></script>
 	<script src="tags/pluginWindow.tag.html" type="riot/tag"></script>
-	<script src="tags/facepp.tag.html" type="riot/tag"></script> 
-	<script src="tags/actionbar.tag.html" type="riot/tag"></script> 
+	<script src="tags/facepp.tag.html" type="riot/tag"></script>
+	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
 	<script src="js/thirdparty/riot+compiler.min.js"></script>
 	<script type="text/javascript">
 		riot.mount("menu, plugins-menu, shortcuts");
 		riot.mount("actionbar");
 		riot.mount("toolbox");
-		riot.mount("images-slider"); 
+		riot.mount("images-slider");
 	</script>
 	<script src="js/thirdparty/svg.min.js"></script>
 	<script src="js/thirdparty/svg.draw.min.js"></script>
