--- a/v2.html
+++ b/v2.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119603824-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
 
-	  gtag('config', 'UA-119603824-1');
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-119603824-1');
 	</script>
 
 	<title>ImgLab</title>
@@ -22,36 +26,41 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/snackbar.css">
 	<link rel="stylesheet" href="css/menu.css">
-	<link rel="stylesheet" href="css/fontello.css" >
+	<link rel="stylesheet" href="css/fontello.css">
 
-	<script src="js/thirdparty/jquery.min.js" ></script>
+	<script src="js/thirdparty/jquery.min.js"></script>
 	<script src="js/thirdparty/jquery-confirm.min.js"></script>
 	<script src="js/thirdparty/bootstrap.min.js"></script>
 	<script src="js/thirdparty/riot.min.js"></script>
-	
+
 	<script src="js/thirdparty/Blob.js"></script>
 	<script src="js/thirdparty/FileSaver.min.js"></script>
 	<script src="js/thirdparty/fxp.js"></script>
-	
+
 
 </head>
+
 <body>
 	<div class="container-fluid">
 		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
 			<div class="p-2 col-1">
 				<menu></menu>
 			</div>
-			<div class="p-2 col-9 text-center "> <!-- form-inline input-group -->
-					<a href="https://github.com/NaturalIntelligence/imglab"><img src="img/imglab_logo.png" height="48px"  style="margin-bottom: 2px" ></a>
-					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
+			<div class="p-2 col-9 text-center ">
+				<!-- form-inline input-group -->
+				<a href="https://github.com/NaturalIntelligence/imglab">
+					<img src="img/imglab_logo.png" height="48px" style="margin-bottom: 2px">
+				</a>
+				<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
 			</div>
 			<div class="p-2  col-2 form-inline flex-row-reverse">
 				<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
 				<shortcuts></shortcuts>
 				<plugins-menu></plugins-menu>
 			</div>
-			
-		</div><!-- End of Menubar -->
+
+		</div>
+		<!-- End of Menubar -->
 	</div>
 	<div class="flex-row">
 		<div class="d-flex flex-row" style="height: calc(100vh - 50px);">
@@ -67,7 +76,7 @@
 					<workarea></workarea>
 				</div>
 				<div class="grey-border mt-auto" style="height: 100px; width: 100%; margin: 0px 2px;">
-						<images-slider thumbnail_width="90px" class="mt-auto"></images-slider>
+					<images-slider thumbnail_width="90px" class="mt-auto"></images-slider>
 				</div>
 			</div>
 			<div id="sidebar" class="p-2 overlay-color grey-border" style="width: 300px;">
@@ -80,7 +89,7 @@
 	</div>
 
 
-	
+
 	<script src="js/prompt.js"></script>
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
@@ -91,14 +100,15 @@
 	<script src="tags/toolbox.tag.html" type="riot/tag"></script>
 	<script src="tags/workarea.tag.html" type="riot/tag"></script>
 	<script src="tags/pluginWindow.tag.html" type="riot/tag"></script>
-	<script src="tags/facepp.tag.html" type="riot/tag"></script> 
-	<script src="tags/actionbar.tag.html" type="riot/tag"></script> 
+	<script src="tags/facepp.tag.html" type="riot/tag"></script>
+	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
 	<script src="js/thirdparty/riot+compiler.min.js"></script>
+	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
 	<script type="text/javascript">
 		riot.mount("menu, plugins-menu, shortcuts");
 		riot.mount("actionbar");
 		riot.mount("toolbox");
-		riot.mount("images-slider"); 
+		riot.mount("images-slider");
 	</script>
 	<script src="js/thirdparty/svg.min.js"></script>
 	<script src="js/thirdparty/svg.draw.min.js"></script>
@@ -112,4 +122,5 @@
 	<script src="js/dlib.js"></script>
 	<script src="js/app.js"></script>
 </body>
+
 </html>
