--- a/v2.html
+++ b/v2.html
@@ -48,10 +48,12 @@
 			</div>
 			<div class="p-2 col-9 text-center ">
 				<!-- form-inline input-group -->
-				<a href="https://github.com/NaturalIntelligence/imglab">
-					<img src="img/imglab_logo.png" height="48px" style="margin-bottom: 2px">
-				</a>
-				<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
+				<div class="row justify-content-center align-content-center">
+					<a href="https://github.com/NaturalIntelligence/imglab">
+						<img src="img/imglab_logo.png" height="48px" style="margin-top: 2px">
+					</a>
+					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
+				</div>
 			</div>
 			<div class="p-2  col-2 form-inline flex-row-reverse">
 				<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
