--- a/v2.html
+++ b/v2.html
@@ -43,10 +43,10 @@
 <body>
 	<div class="container-fluid">
 		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
-			<div class="p-2 col-1">
-				<menu></menu>
+			<div class="col-3 col-sm-2 col-md-1">
+				<menu-dropdown></menu-dropdown>
 			</div>
-			<div class="p-2 col-9 text-center ">
+			<div class="col-6 col-sm-6 col-md-7 text-center">
 				<!-- form-inline input-group -->
 				<div class="row justify-content-center align-content-center">
 					<a href="https://github.com/NaturalIntelligence/imglab">
@@ -55,10 +55,12 @@
 					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
 				</div>
 			</div>
-			<div class="p-2  col-2 form-inline flex-row-reverse">
-				<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
-				<shortcuts></shortcuts>
-				<plugins-menu></plugins-menu>
+			<div class="col-3 col-sm-4 col-md-4 ">
+				<div class="form-inline flex-row-reverse float-right">
+					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
+					<shortcuts class="d-none d-md-block"></shortcuts> 
+					<plugins-menu  class="d-none d-md-block"></plugins-menu>
+				</div>
 			</div>
 
 		</div>
@@ -107,7 +109,7 @@
 	<script src="js/thirdparty/riot+compiler.min.js"></script>
 	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
 	<script type="text/javascript">
-		riot.mount("menu, plugins-menu, shortcuts");
+		riot.mount("menu-dropdown, plugins-menu, shortcuts");
 		riot.mount("actionbar");
 		riot.mount("toolbox");
 		riot.mount("images-slider");
