--- a/v2.html
+++ b/v2.html
@@ -43,10 +43,10 @@
 <body>
 	<div class="container-fluid">
 		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
-			<div class="col-3 col-sm-2 col-md-1">
+			<div class="col-3 col-sm-2 col-md-1 col-xl-1">
 				<menu-dropdown></menu-dropdown>
 			</div>
-			<div class="col-6 col-sm-6 col-md-7 text-center">
+			<div class="col-6 col-sm-6 col-md-7 col-xl-7text-center">
 				<!-- form-inline input-group -->
 				<div class="row justify-content-center align-content-center">
 					<a href="https://github.com/NaturalIntelligence/imglab">
@@ -55,7 +55,7 @@
 					<span style="font-size: 2em; margin-top:5px;">Img Lab</span>
 				</div>
 			</div>
-			<div class="col-3 col-sm-4 col-md-4 ">
+			<div class="col-3 col-sm-4 col-md-4 col-xl-4">
 				<div class="form-inline flex-row-reverse float-right">
 					<a class="btn btn-info" onclick="javascript:displayDonationPrompt()" style="margin: 0px 10px;">Donate</a>
 					<shortcuts class="d-none d-md-block"></shortcuts> 
