Create app settings window

--- a/v2.html
+++ b/v2.html
@@ -15,7 +15,7 @@
 		gtag('config', 'UA-119603824-1');
 	</script>
 
-	<title>ImgLab</title>
+	<title>ImgLab - Image Annotation tool</title>
 
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slider.1.css">
@@ -43,7 +43,7 @@
 <body>
 	<div class="container-fluid">
 		<div id="menubar" class="row overlay-color align-items-center" style="height: 50px;">
-			<div class="col-3 col-sm-2 col-md-1 col-xl-1">
+			<div class="col-3 col-sm-2 col-md-1 col-xl-1 no-pl">
 				<menu-dropdown></menu-dropdown>
 			</div>
 			<div class="col-6 col-sm-6 col-md-7 col-xl-7text-center">
@@ -114,6 +114,7 @@
 		riot.mount("toolbox");
 		riot.mount("images-slider");
 	</script>
+	<script src="js/settings.js"></script>
 	<script src="js/thirdparty/svg.min.js"></script>
 	<script src="js/thirdparty/svg.draw.min.js"></script>
 	<script src="js/thirdparty/svg.select.min.js"></script>
