--- a/v2.html
+++ b/v2.html
@@ -97,6 +97,8 @@
 	<script src="js/prompt.js"></script>
 	<script src="js/config.js"></script>
 	<!-- <script src="tags/tags.js"></script> -->
+	<script src="js/thirdparty/riot+compiler.min.js"></script>
+
 	<script src="tags/images-slider.tag.html" type="riot/tag"></script>
 	<script src="tags/menu.tag.html" type="riot/tag"></script>
 	<script src="tags/pluginsMenu.tag.html" type="riot/tag"></script>
@@ -106,8 +108,10 @@
 	<script src="tags/pluginWindow.tag.html" type="riot/tag"></script>
 	<script src="tags/facepp.tag.html" type="riot/tag"></script>
 	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
-	<script src="js/thirdparty/riot+compiler.min.js"></script>
 	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
+
+	<script src="tags/actions/lightbulb-action.tag.html" type="riot/tag"></script>
+
 	<script type="text/javascript">
 		riot.mount("menu-dropdown, plugins-menu, shortcuts");
 		riot.mount("actionbar");
