move facepp plugin in plugins folder

--- a/v2.html
+++ b/v2.html
@@ -106,7 +106,7 @@
 	<script src="tags/toolbox.tag.html" type="riot/tag"></script>
 	<script src="tags/workarea.tag.html" type="riot/tag"></script>
 	<script src="tags/pluginWindow.tag.html" type="riot/tag"></script>
-	<script src="tags/facepp.tag.html" type="riot/tag"></script>
+	<script src="tags/plugins/facepp.tag.html" type="riot/tag"></script>
 	<script src="tags/actionbar.tag.html" type="riot/tag"></script>
 	<script src="tags/trackinglines.tag.html" type="riot/tag"></script>
 
